<resources>
    <string name="app_name">MyShop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_name">Product Name</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="product_price_per_unit">Product Price Per Unit</string>
    <string name="select_category">Select Category</string>
    <string name="date">01/02/2022</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="time">12:00 AM</string>
    <string name="productname">ProductName</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>