<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".UploadProductFragment"
        android:background="@drawable/ic_wave"
        android:gravity="center">

        <EditText
            android:id="@+id/productName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_margin="20dp"
            android:inputType="textPersonName"
            android:textColorHint="@color/black"
            android:hint="@string/product_name"
            android:background="@drawable/field_background"
            android:padding="15dp" />

        <EditText
            android:id="@+id/productQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:layout_margin="20dp"
            android:textColorHint="@color/black"
            android:hint="@string/product_quantity"
            android:background="@drawable/field_background"
            android:padding="15dp" />

        <EditText
            android:id="@+id/productPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:layout_margin="20dp"
            android:textColorHint="@color/black"
            android:hint="@string/product_price_per_unit"
            android:background="@drawable/field_background"
            android:padding="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/field_background"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textSize="15sp"
                android:gravity="center"
                android:text="@string/select_category" />

            <Spinner
                android:id="@+id/productCategory"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <Button
                android:id="@+id/dateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:text="@string/select_date"
                android:background="@drawable/btn_background" />

            <TextView
                android:id="@+id/dateView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:textColorHint="@color/black"
                android:hint="@string/date"
                android:layout_marginLeft="5dp"
                android:background="@drawable/field_background"
                android:padding="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <Button
                android:id="@+id/timeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:text="@string/select_time"
                android:background="@drawable/btn_background" />

            <TextView
                android:id="@+id/timeShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:hint="@string/time"
                android:textColorHint="@color/black"
                android:background="@drawable/field_background"
                android:padding="15dp" />
        </LinearLayout>

        <Button
            android:id="@+id/uploadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Upload"
            android:background="@drawable/btn_background" />

    </LinearLayout>
</layout>